compiler/tools/fpp-check/test/command/async_passive.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/async_passive.fpp: 3.3
  async command C
  ^
error: passive component may not have async input
